fixed setup header alignment

--- a/community/logicaldoc/trunk/logicaldoc-gui/war/skin/style.css
+++ b/community/logicaldoc/trunk/logicaldoc-gui/war/skin/style.css
@@ -29,7 +29,6 @@
 	font-weight: bold;
 	color: #AAAAAA;
 	vertical-align: center;
-	text-align: right;
 }
 
 .topPanel {
